# rdbunit

./: .gitignore  .travis.yml  CITATION.cff  Makefile  Pipfile  README.md  pyproject.toml  rdbunit.py  runtest.sh
.github/workflows/: ci.yml
examples/: commits_comments.rdbu  commits_with_comments.sql  communication_report.rdbu  communication_report.sql  datatypes.rdbu  empty.rdbu  join-where.rdbu  leader_commits_nl_comments.sql  nl_commits_leader_comments.sql  ordered_revenue.rdbu  simple.rdbu
src/rdbunit/: Makefile  __main__.py
tests/: test-mysql.sh  test-parts.sh  test-postgresql.sh  test-sqlite.sh
